--- a/portfolio.html
+++ b/portfolio.html
@@ -961,7 +961,7 @@
         <div class="hero-gradient-bg"></div>
         
         <!-- Updated background image -->
-        <img src="me.png" class="hero-bg-image" alt="Hero Background">
+        <img src="./me.png" class="hero-bg-image" alt="Hero Background">
         <div class="hero-overlay"></div>
         
         <!-- Content with improved layout -->
