--- a/poe.html
+++ b/poe.html
@@ -1458,20 +1458,22 @@
                 <div class="grid grid-cols-1 md:grid-cols-12 gap-8">
                     <!-- Project 1 -->
                     <div class="md:col-span-8">
+                        <a href="https://fut-champions-phi.vercel.app/">
                         <div class="project-card" data-cursor-text="View Project">
                             <div class="aspect-video bg-gray-800 flex items-center justify-center">
-                                <span class="text-3xl font-bold text-gray-600">E-Commerce Platform</span>
+                        <img src="./imges/Capture d’écran 2025-04-25 195109.png" alt="">
                             </div>
                             <div class="project-overlay">
-                                <h3 class="text-2xl font-bold mb-2">E-Commerce Platform</h3>
-                                <p class="text-gray-300 mb-4">A full-stack e-commerce solution with Laravel and MySQL</p>
+                                <h3 class="text-2xl font-bold mb-2">FUT Champions</h3>
+                                <p class="text-gray-300 mb-4">Ultimate Football Team Builder FUT Champion is a web-based football team management application where users can build their own ultimate football team</p>
                                 <div class="flex gap-2 flex-wrap">
-                                    <span class="px-2 py-1 text-xs rounded" style="color: var(--accent);">Laravel</span>
-                                    <span class="px-2 py-1 text-xs rounded" style="color: var(--accent);">MySQL</span>
+                                    <span class="px-2 py-1 text-xs rounded" style="color: var(--accent);">API</span>
+                                    <!-- <span class="px-2 py-1 text-xs rounded" style="color: var(--accent);">MySQL</span> -->
                                     <span class="px-2 py-1 text-xs rounded" style="color: var(--accent);">Tailwind CSS</span>
                                     <span class="px-2 py-1 text-xs rounded" style="color: var(--accent);">JavaScript</span>
                                 </div>
                             </div>
+                        </a>
                         </div>
                     </div>
                     
@@ -1531,7 +1533,7 @@
                     
                     <!-- Project 5 -->
                     <div class="md:col-span-12">
-                        <a href="https://vercel.com/red-jens-projects/sneaky/9vG4GxaU4tLzZJ9AZ8hCYHH3sNqq">
+                        <a href="https://sneaky-bice.vercel.app/">
                         <div class="project-card" data-cursor-text="View Project">
                             <div class="aspect-video bg-gray-800 flex items-center justify-center" >
                                 <img src="imges/Capture d’écran 2025-04-22 095823.png" alt="">
