--- a/index.html
+++ b/index.html
@@ -12,11 +12,40 @@
 <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./comp.css">
     <link rel="stylesheet" href="./eye.css">
+    <link rel="stylesheet" href="./loader.css">
 </head>
 <body>
     <!-- Loading Screen -->
     <div class="loading-screen">
+        <!-- From Uiverse.io by necatimertmetin --> 
+<!-- From Uiverse.io by 20essentials --> 
+<!-- <aside class="loader" style="--wh-number: 24;">
+    <div class="pixel"></div>
+  </aside>
+   --><!-- From Uiverse.io by SelfMadeSystem --> 
+<!-- From Uiverse.io by S3nouy --> 
+<div class="fire">
+    <div class="fire-left">
+      <div class="main-fire"></div>
+      <div class="particle-fire"></div>
+    </div>
+    <div class="fire-center">
+      <div class="main-fire"></div>
+      <div class="particle-fire"></div>
+    </div>
+    <div class="fire-right">
+      <div class="main-fire"></div>
+      <div class="particle-fire"></div>
+    </div>
+    <div class="fire-bottom">
+      <div class="main-fire"></div>
+    </div>
+  </div>
+  
+
+  
         <div class="loader">
+
             <div class="loader__element"></div>
             <div class="loader__element"></div>
             <div class="loader__element"></div>
