--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- Improved viewport meta tag with higher priority for proper mobile rendering -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <!-- Fix viewport meta tag to prevent horizontal scrolling -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>Reda Jenhaji | Full-Stack Developer</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./eye.css">
     <link rel="stylesheet" href="./loader.css">
 </head>
-<body>
+<body class="overflow-x-hidden">
     <!-- Loading Screen -->
     <div class="loading-screen">
         <!-- From Uiverse.io by necatimertmetin --> 
