replace years of experience with education

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             </div>
                             <div class="luxury-stat">
                                 <div class="luxury-stat-number" data-value="2">0</div>
-                                <div class="luxury-stat-label">Years Experience</div>
+                                <div class="luxury-stat-label">Years Education</div>
                             </div>
                             <div class="luxury-stat">
                                 <div class="luxury-stat-number" data-value="12">0</div>
