--- a/index.html
+++ b/index.html
@@ -660,6 +660,11 @@
     </div>
 </section>
 
+<!-- Add this after the tech keyboard section to fix layout -->
+<div class="content-after-keyboard">
+  <!-- Any content that should appear after the keyboard -->
+</div>
+
 <!-- Skills Section -->
 <section id="skills" class="min-h-screen px-4 md:px-16 lg:px-24 py-16 md:py-24" style="background-color: var(--bg-secondary);">
     <div class="max-w-7xl mx-auto w-full">
