--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
     <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/controls/OrbitControls.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <link rel="stylesheet" href="tech-keyboard-3d.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r132/three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.umd.js"></script>
+    <script src="tech-keyboard.js" defer></script>
 </head>
 <body class="overflow-x-hidden">
     <!-- Loading Screen -->
@@ -281,7 +284,7 @@
                                         <div class="text-xs text-gray-400">Projects</div>
                                     </div>
                                     <div class="text-center p-2 rounded-lg bg-opacity-10 bg-white hover:bg-opacity-20 transition-all duration-300">
-                                        <div class="text-xl font-bold">12+</div>
+                                        <div class="text-xl font-bold">12+</</div>
                                         <div class="text-xs text-gray-400">Tech Stack</div>
                                     </div>
                                 </div>
