--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r132/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.umd.js"></script>
     <script src="tech-keyboard.js" defer></script>
+    <!-- Add these lines in the head section -->
+    <link rel="stylesheet" href="layout-fixes.css">
 </head>
 <body class="overflow-x-hidden">
     <!-- Loading Screen -->
@@ -284,7 +286,7 @@
                                         <div class="text-xs text-gray-400">Projects</div>
                                     </div>
                                     <div class="text-center p-2 rounded-lg bg-opacity-10 bg-white hover:bg-opacity-20 transition-all duration-300">
-                                        <div class="text-xl font-bold">12+</</div>
+                                        <div class="text-xl font-bold">12+</div>
                                         <div class="text-xs text-gray-400">Tech Stack</div>
                                     </div>
                                 </div>
@@ -361,7 +363,7 @@
                                     <div class="mb-8">
                                         <div class="flex justify-between items-center mb-2">
                                             <h4 class="text-white font-medium">???????? ??????? ???</h4>
-                                            <span class="text-accent" style="color: var (--accent);">2024 - in progress</span>
+                                            <span class="text-accent" style="color: var(--accent);">2024 - in progress</span>
                                         </div>
                                         <p class="text-gray-400 text-sm mb-2">Web Development Team</p>
                                         <p class="text-gray-300 leading-relaxed">
@@ -517,6 +519,7 @@
                 </div>
             </div>
         </section>
+        
         
         <!-- Projects Section -->
         <section id="projects" class="min-h-screen px-4 md:px-16 lg:px-24 py-16 md:py-24">
@@ -925,6 +928,7 @@
 
 <!-- Keyboard script - make sure this comes after the HTML elements above -->
 <script src="tech-keyboard-3js.js"></script>
-
+<!-- Add this line before the closing body tag -->
+<script src="layout-cleanup.js" defer></script>
 </body>
 </html>
