--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                                     <div class="mb-8">
                                         <div class="flex justify-between items-center mb-2">
                                             <h4 class="text-white font-medium">???????? ??????? ???</h4>
-                                            <span class="text-accent" style="color: var(--accent);">2024 - in progress</span>
+                                            <span class="text-accent" style="color: var (--accent);">2024 - in progress</span>
                                         </div>
                                         <p class="text-gray-400 text-sm mb-2">Web Development Team</p>
                                         <p class="text-gray-300 leading-relaxed">
@@ -930,5 +930,8 @@
 <script src="tech-keyboard-3js.js"></script>
 <!-- Add this line before the closing body tag -->
 <script src="layout-cleanup.js" defer></script>
+<script src="keyboard-size-fix.js"></script>
+<!-- Add this right before the closing body tag -->
+<script src="tech-panel-enhancement.js"></script>
 </body>
 </html>
