kebord hover techs

--- a/index.html
+++ b/index.html
@@ -653,6 +653,8 @@
         
         <!-- Tech Keyboard Visualization -->
         <div id="tech-keyboard-container"></div>
+        
+        <!-- Tech Detail Panel - Now positioned below the keyboard -->
         <div id="tech-detail-panel" class="tech-detail-panel">
             <div class="tech-detail-inner">
                 <div class="tech-detail-header">
@@ -661,6 +663,8 @@
                 </div>
                 <div class="tech-detail-category"></div>
                 <p class="tech-detail-description"></p>
+                <div class="tech-skill-bars"></div>
+                <div class="tech-projects"></div>
                 <div class="tech-detail-experience"></div>
             </div>
         </div>
