keybord techs updated

--- a/index.html
+++ b/index.html
@@ -915,7 +915,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
 
 <!-- Add these elements to where you want the keyboard to appear -->
-<div class="tech-keyboard-section">
+<!-- <div class="tech-keyboard-section">
   <div id="tech-keyboard-container"></div>
   <div id="tech-detail-panel" class="tech-detail-panel">
     <div class="tech-detail-inner">
@@ -928,7 +928,7 @@
       <div class="tech-detail-experience"></div>
     </div>
   </div>
-</div>
+</div> -->
 
 <!-- Keyboard script - make sure this comes after the HTML elements above -->
 <script src="tech-keyboard-3js.js"></script>
@@ -937,5 +937,7 @@
 <script src="keyboard-size-fix.js"></script>
 <!-- Add this right before the closing body tag -->
 <script src="tech-panel-enhancement.js"></script>
+<!-- Add this right before the closing body tag -->
+<script src="tech-keyboard-extension.js"></script>
 </body>
 </html>
