--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
                         </div>
                     </a>
                     </div>
-                </div>eural-network-container">
+                </div>
                 
                 <div class="mt-12 md:mt-16 text-center">
                     <a href="https://github.com/red-jen?tab=repositories" target="_blank">
@@ -649,7 +649,7 @@
 <section class="tech-stack-section relative py-20 min-h-screen flex flex-col justify-center" style="background-color: var(--bg-primary);">
     <div class="max-w-7xl mx-auto px-4 w-full">
         <h2 class="text-4xl md:text-5xl font-bold mb-8 md:mb-12 text-center">Technology Stack</h2>
-        <p class="text-center text-gray-400 mb-12 max-w-3xl mx-auto">My toolkit for crafting digital experiences - hover over keys to explore.</p>
+        <p class="text-center text-gray-400 mb-12 max-w-3xl mx-auto">My toolkit for crafting digital experiences - hover over keys to explore. "this part in progress lmk if you see an issue here"</p>
         
         <!-- Tech Keyboard Visualization -->
         <div id="tech-keyboard-container"></div>
