hero section responsive

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
     <script src="tech-keyboard.js" defer></script>
     <!-- Add these lines in the head section -->
     <link rel="stylesheet" href="layout-fixes.css">
+    <!-- Add these lines to the head section for mobile hero enhancements -->
+    <link rel="stylesheet" href="mobile-hero-fix.css">
+    <!-- Add this meta tag to improve mobile viewports -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0">
 </head>
 <body class="overflow-x-hidden">
     <!-- Loading Screen -->
@@ -286,7 +290,7 @@
                                         <div class="text-xs text-gray-400">Projects</div>
                                     </div>
                                     <div class="text-center p-2 rounded-lg bg-opacity-10 bg-white hover:bg-opacity-20 transition-all duration-300">
-                                        <div class="text-xl font-bold">12+</div>
+                                        <div class="text-xl font-bold">12+</</div>
                                         <div class="text-xs text-gray-400">Tech Stack</div>
                                     </div>
                                 </div>
@@ -939,5 +943,7 @@
 <script src="tech-panel-enhancement.js"></script>
 <!-- Add this right before the closing body tag -->
 <script src="tech-keyboard-extension.js"></script>
+<!-- Add this script before the closing body tag -->
+<script src="mobile-hero-fix.js"></script>
 </body>
 </html>
