--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
     <link rel="stylesheet" href="mobile-hero-fix.css">
     <!-- Add this meta tag to improve mobile viewports -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0">
+    <!-- Add these lines to the head section for hero section enhancement -->
+    <link rel="stylesheet" href="hero-enhancement.css">
+    <!-- Add these lines to the head section for About section enhancement -->
+    <link rel="stylesheet" href="about-section.css">
+    <!-- Add these lines to the head section for horizontal About section -->
+    <link rel="stylesheet" href="about-section-horizontal.css">
+    <link rel="stylesheet" href="about-visible-tabs.css">
 </head>
 <body class="overflow-x-hidden">
     <!-- Loading Screen -->
@@ -945,5 +952,15 @@
 <script src="tech-keyboard-extension.js"></script>
 <!-- Add this script before the closing body tag -->
 <script src="mobile-hero-fix.js"></script>
-</body>
+<!-- Add these scripts before the closing body tag -->
+<script src="hero-canvas.js"></script>
+<script src="hero-layout-enhancement.js"></script>
+<!-- Add this script before the closing body tag -->
+<script src="about-section-horizontal.js"></script>
+<!-- Update to fix the About section content display -->
+<!-- Add this script before the closing body tag and after the about-section-horizontal.js script -->
+<script src="about-section-fix.js"></script>d this script before the closing body tag -->
+</body> src="about-content-fix.js"></script>
+
+</html></body>
 </html>
